all css/website.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Lobster&family=Pacifico&family=Recursive:wght@300;400;500;700&family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,300;0,8..144,500;0,8..144,600;0,8..144,700;0,8..144,800;0,8..144,900;1,8..144,100;1,8..144,200;1,8..144,500;1,8..144,900&family=Satisfy&family=Spline+Sans+Mono:wght@300;400;500;700&display=swap');

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
    font-family: 'Roboto Serif', serif;
    margin: 0%;
    box-sizing: border-box;
    background: linear-gradient(rgb(255, 255, 255, 0.9), rgb(255, 255, 255, 0.9)), url("../Images/bacground4.jpg");
  height: 100vh;
}

/*-------------------Global classes------------------------*/
a {
    text-decoration: none;
}

.flexbox{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

/* .flexbox{
    display: flex;
} */

ul{
    list-style: none;
}

/*-------------------Global classes------------------------*/
.nav {
    padding: 0 2rem;
    height: 4rem;
    overflow: hidden;
    transition: height 1s ease-in-out;
    background-color: rgba(134, 253, 192, 0.9);
  position: fixed;
  width: 100%;
  z-index: 1;
}

.nav .nav-menu {
    justify-content: space-between;
}

.nav .nav-brand a {
    font-size: 1.9rem;
    padding: 1rem 0;
    display: block;
    letter-spacing: 0.2rem;
    -webkit-text-fill-color: transparent;
    background: linear-gradient(90deg, red, orange, green, #00ddff, #ff00d4, purple);
    -webkit-background-clip: text;
    text-transform: uppercase;
    font-family: 'Lobster', cursive;
    font-weight: 700;
}

.nav .nav-items {
    display: flex;
    margin: 0;
}

.nav .nav-items .nav-link {
    padding: 1.6rem 1rem;
}

.nav .nav-items .nav-link a{
    color: white;
    font-size: 1.2rem;
}

.nav .nav-items .nav-link:hover {
    background-color: teal;
}

.nav .nav-items .nav-link:hover a {
    color: white !important;
}

.nav-link a {
    color: teal !important;
}

.nav .social {
    padding: 1.4rem 0;
}

.nav .social i {
    padding: 0 1rem;
    font-size: 1.4rem;
    color: teal;
}

.main-side{
    padding: 6.8rem 0 3rem 0;
    width: 85%;
    margin: auto;
    display: flex;
    justify-content: space-between;
    

}

.main-side h1{
    font-size: 45px;
    color: teal;
    font-family: 'Satisfy', cursive;
    font-weight: 700;
}

.main-side p{
    font-size: 20px;
    margin-bottom: 2rem;
}

.main-content a{
    padding: 1rem 2rem;
    border-radius: 15px;
    box-shadow: none;
    background-color: teal;
    border: rgb(8, 59, 59);
    color: white;
    font-size: 17px;
    font-family: 'Satisfy', cursive;
    font-weight: 500;
    
}

.main-content a:hover{
    color: teal;
    border: 2px solid rgb(8, 59, 59);
    background-color: white;
}


/*--------------Picture-------------------------------*/
.flip-out {
    background-color: transparent;
    width: 350px;
    height: 350px;
    border: 1px solid teal;
    perspective: 1000px;
}

.flip-out-inner {
    position: relative;
    width: 100%;
    height: 100%;
    transition: transform 4s;
    transform-style: preserve-3d;
    animation: animate 20s linear infinite;
    perspective: 800px;
}

@keyframes animate {
    0% {
        transform: rotateY(0deg);
    }

    100% {
        transform: rotateY(360deg);
    }
}

.flip-out-front,
.flip-out-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

.flip-out-front {
    background-color: #bbb;
    color: black;
}

.flip-out-back {
    background-color: #555;
    color: white;
    transform: rotateY(180deg);
}

/*------------x--------Picture----------x---------------*/

/*---------------------Contact Page-----------------------*/

.cover-head{
    background: linear-gradient(90deg, rgb(19, 100, 252, 0.9), rgb(226, 51, 226, 0.9)),
    url("../Images/bacground4.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    padding: 0 0 2rem 0;
    font-family: 'Roboto Serif', serif;
    /* background: linear-gradient(90deg, rgb(19, 100, 252), rgb(226, 51, 226));    */
}

.container-cover{
    width: 70%;
    margin: 0 auto;
   padding: 5rem 0 0.5rem 0;
}

.cover{
    width: 100%;
    background-color: rgb(235, 232, 232);
    display: flex;
    border-radius: 20px;
    border: 1px solid rgb(18, 18, 219);
    box-shadow: 2px 2px 4px rgb(119, 118, 118);
}

.cover-text, .cover-style{
    width: 100%;
    height: 100%;
}

.cover-text h2{
    color: darkblue;
    font-size: 30px;
  margin-bottom: 1rem;
}

.cover-style i {
    font-size: 10rem;
    -webkit-text-fill-color: transparent;
    background: linear-gradient(180deg, #00ddff, #ff00d4, purple);
    -webkit-background-clip: text;
}

.cover-style{
    text-align: center;
    margin: auto 0;
    background-color: rgb(18, 18, 219);
    padding: 1rem 0 !important;
}

.cover-text{
  padding: 1rem 3rem;
}

input{
    padding: 0.9rem 0rem 0.9rem 2.5rem;
    margin-bottom: 0.5rem;
    border-radius: 20px;
    width: 100%;
}

textarea{
    padding: 0.5rem 1.2rem;
    margin-bottom: 0.5rem;
    border-radius: 20px;
    width: 100%;
}

form{
  width: 100%;
}

.cover-text button{
    width: 100%;
    text-align: center;
    padding: 0.9rem 1rem;
    margin-bottom: 0.5rem;
    border-radius: 20px;
    background-color: rgb(18, 18, 219);
    color: white;
    border: none;
}
input, button, textarea{
    font-size: 14px;
    box-shadow: 4px 5px 8px #c7c5c5;
    border: none;
}

.hope{
    position: relative;
}

.hope i {
    position: absolute;
    color: grey;
    padding: 15px 0px 15px 15px;
}
/*-------------x--------Contact Page-----------x------------*/

/*----------------------Login page-----------------------*/


/*----------------------Login Page-----------------------*/

/*------------------Experiment-------------------------*/

/* #wrapper {
    perspective: 1000px;
    width: 100px;
    height: 150px;
}

#wrapper.flipped .card {
    transform: rotateY(180deg);
}

.card {
    width: 100%;
    height: 100%;
    position: relative;
    transition: transform 500ms;
    transform-style: preserve-3d;
}

.card .front,
.card .back {
    width: 100%;
    height: 100%;
    border-radius: 15px;
    position: absolute;
    top: 0;
    left: 0;
    backface-visibility: hidden;
}

.card .front {
    background-color: midnightblue;
    z-index: 1;
}

.card .back {
    background-color: firebrick;
    transform: rotateY(180deg);
} */
/*-------------x-------Experiment-------------x--------------*/


/*----------------Checking-------------------------*/



/* .coin{
    width: 200px;
    height: 200px;
    border-radius: 50%;
    background-color: red;
    animation: animate 10s linear infinite;
    perspective: 800px;
}

@keyframes animate{
    0%{
        transform: rotateY(0deg);
    }
    100%{
        transform: rotateY(360deg);
    }
} */
/*----------------Checking-------------------------*/

.nav .toggle-collapse {
    position: absolute;
    top: 0;
    right: 25px;
    cursor: pointer;
    display: none;
}

.nav .toggle-collapse .toggle-icons {
    display: flex;
    justify-content: flex-end;
    padding: 1rem 0;

}

.nav .toggle-collapse .toggle-icons i {
    font-size: 1.4rem;
    border: 2px solid black;
    padding: 0.2rem 0.5rem;
}

.collapse {
    height: 25rem !important;
}

.support {
    display: flex;
    gap: 2rem;
    align-items: center;
    justify-content: center;
    background: rgba(134, 253, 192, 0.9);
    height: 5rem;
    width: 100%;
    margin-top: 1rem !important;
}

.support a {
    color: Teal;
    cursor: pointer;
}

@media only screen and (max-width: 913px){
    .nav .nav-menu,
    .nav .nav-items, .cover, .main-side{
        flex-direction: column;
    }

   .nav .toggle-collapse {
    display: initial;
    }
  
    .main-content, .pic{
        width: 100% !important;
        margin-bottom: 3rem;
    }

    .flip-out, img{
        width: 100% !important;
    }

    .cover-head{
        height: auto;
    }

    .cover-style, .cover-text{
        width: 100%;
        border: none;
    }

    .cover-text{
        padding: 2rem; 
    }

    .cover-style{
        border-radius: 20px;
    }

    .support {
            flex-direction: column;
            gap: 1rem;
            height: 7rem;
    }

}

